src/widget/Transition.less
.app-transition-enter, .app-transition-enter-done, .app-transition-exit {
    will-change: transform, opacity;
}

.app-transition-enter {
    opacity: 0;
    transform: translateY(-3px);
}
.app-transition-enter-active {
    opacity: 1;
    transform: translateY(0);
    transition: opacity 83ms ease-out, transform 83ms ease-out;
}

.app-transition-exit {
    opacity: 1;
    transform: translateY(0) scaleX(1);
}
.app-transition-exit-active {
    opacity: 0;
    transform: translateY(8px) scaleX(.98);
    transition: opacity 83ms ease-out, transform 83ms ease-out;
}

